<resources>
    <string name="app_name">EtherWallet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_list_accounts">List Accounts</string>
    <string name="action_new_accounts">New Account</string>
    <string name="app_icon_content_description">App Icon</string>
    <string name="msg_syncing_done">Syncing: DONE</string>
    <string name="msg_syncing_true">Syncing: true</string>
    <string name="msg_syncing_false">Syncing: false</string>
    <string name="msg_import">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="msg_peercount">Peercount: ?</string>
    <string name="msg_current_block">Current block: ?</string>
    <string name="msg_highest_block">Highest block: ?</string>
    <string name="msg_syncing">Syncing: ?</string>
    <string name="msg_account">Account: ?</string>
    <string name="msg_balances">Balances: ?</string>
    <string name="msg_android_studio">Android Studio</string>
    <string name="msg_android_studio_android_com">android.studio@android.com</string>
    <string name="title_activity_main2">MobileApi</string>
</resources>
