<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/action_settings"
      android:title="@string/action_settings"
      android:orderInCategory="100"
      app:showAsAction="never"/>

  <item
    android:id="@+id/action_create_account"
    android:title="@string/action_create_account"
    android:orderInCategory="100"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_list_accounts"
    android:title="@string/action_list_accounts"
    android:orderInCategory="100"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_new_account"
    android:title="@string/action_new_accounts"
    android:orderInCategory="100"
    app:showAsAction="never" />
</menu>
