<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="com.jaeckel.etherwallet.MainActivity"
  tools:showIn="@layout/app_bar_main">


  <TextView
    android:id="@+id/net_peer_count"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/msg_peercount" />

  <TextView
    android:id="@+id/eth_current_block"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/msg_current_block"
    />

  <TextView
    android:id="@+id/highest_block"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/msg_highest_block" />

  <TextView
    android:id="@+id/eth_syncing"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/msg_syncing" />

  <TextView
    android:id="@+id/account"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/msg_account" />

  <TextView
    android:id="@+id/balances"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/msg_balances" />

</LinearLayout>
